--- a/R/R_정리/R10 ; data.frame functions-2.ipynb
+++ b/R/R_정리/R10 ; data.frame functions-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eastern-special",
+   "id": "satellite-jersey",
    "metadata": {},
    "source": [
     "## R10 ; data.frame functions-2\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "saving-saturn",
+   "id": "advance-estate",
    "metadata": {},
    "source": [
     "### Sorting \n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dominant-bikini",
+   "id": "quarterly-college",
    "metadata": {},
    "source": [
     "#### 1.order\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "unlike-responsibility",
+   "id": "abroad-secret",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "unlike-wisconsin",
+   "id": "spanish-science",
    "metadata": {
     "scrolled": true
    },
@@ -810,16 +810,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ongoing-steel",
+   "id": "double-basket",
    "metadata": {},
    "source": [
-    "#### 2.sort"
+    "#### 2.sort( )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "headed-grant",
+   "id": "earned-sleeping",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sort(iris$Sepal.Length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "heated-vietnamese",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -827,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hispanic-caribbean",
+   "id": "sexual-bloom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stretch-carol",
+   "id": "hourly-wales",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -845,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proprietary-decimal",
+   "id": "multiple-bangladesh",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -853,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "blocked-thanks",
+   "id": "subtle-talent",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -861,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "expected-modeling",
+   "id": "square-damage",
    "metadata": {},
    "outputs": [],
    "source": []
