--- a/R/R_정리/R10 ; data.frame functions-2.ipynb
+++ b/R/R_정리/R10 ; data.frame functions-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "satellite-jersey",
+   "id": "future-question",
    "metadata": {},
    "source": [
     "## R10 ; data.frame functions-2\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advance-estate",
+   "id": "split-legislation",
    "metadata": {},
    "source": [
     "### Sorting \n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quarterly-college",
+   "id": "female-stomach",
    "metadata": {},
    "source": [
     "#### 1.order\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "abroad-secret",
+   "id": "certain-blues",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "spanish-science",
+   "id": "stone-summary",
    "metadata": {
     "scrolled": true
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "double-basket",
+   "id": "individual-disabled",
    "metadata": {},
    "source": [
     "#### 2.sort( )"
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "earned-sleeping",
+   "id": "following-monroe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "heated-vietnamese",
+   "id": "criminal-westminster",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -837,17 +837,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sexual-bloom",
+   "id": "young-fleece",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sorta order doBy package(summaryBy orderBy sampleBy) ddplyr"
+    "sorta order doBy package(summaryBy orderBy sampleBy) sample ddplyr"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hourly-wales",
+   "id": "minute-stack",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -855,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "multiple-bangladesh",
+   "id": "wooden-division",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subtle-talent",
+   "id": "worth-validation",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "square-damage",
+   "id": "endless-bearing",
    "metadata": {},
    "outputs": [],
    "source": []
