--- a/R/R_정리/R09 ; data.frame functions-1.ipynb
+++ b/R/R_정리/R09 ; data.frame functions-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "satisfied-avenue",
+   "id": "outside-skirt",
    "metadata": {},
    "source": [
     "## R09 ; 데이터 프레임에서 유용한 함수들"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "simplified-legend",
+   "id": "coated-wrong",
    "metadata": {},
    "source": [
     "#### 1. ifelse( )"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "french-boxing",
+   "id": "stone-klein",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "separated-pierre",
+   "id": "mexican-skill",
    "metadata": {},
    "source": [
     "#### 2. which( )"
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cardiac-romance",
+   "id": "second-advertiser",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "metric-terrace",
+   "id": "cellular-subject",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "systematic-blocking",
+   "id": "through-armenia",
    "metadata": {},
    "source": [
     "#### 3. with( ) within()\n",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "latter-worry",
+   "id": "associate-science",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "modified-meter",
+   "id": "comprehensive-chick",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "talented-siemens",
+   "id": "decent-spell",
    "metadata": {},
    "source": [
     "#### 4. subset(data.frame ,subset,select)\n",
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cooperative-break",
+   "id": "aquatic-paragraph",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "secondary-climate",
+   "id": "civic-mason",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "combined-dubai",
+   "id": "corrected-nothing",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bound-bryan",
+   "id": "injured-crossing",
    "metadata": {},
    "source": [
     "#### 5. lapply( )\n",
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "brown-picture",
+   "id": "appreciated-central",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "raising-submission",
+   "id": "valuable-beaver",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "confidential-midwest",
+   "id": "authorized-boost",
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "integrated-paste",
+   "id": "animated-spiritual",
    "metadata": {},
    "source": [
     "#### 6. sapply( )\n",
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "anonymous-beach",
+   "id": "earned-ordinance",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "suspected-campaign",
+   "id": "executed-beauty",
    "metadata": {},
    "outputs": [
     {
@@ -882,19 +882,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "strong-joshua",
+   "id": "consistent-penetration",
    "metadata": {},
    "source": [
     "#### 7. tapply( )\n",
     "- 기준으로 나눠서 계산한다\n",
     "- default return값은 배열이다\n",
-    "- 주로 object는 vector를 사용하는게 좋다 => 안그러면 좀 복잡해짐"
+    "- 주로 object는 vector를 사용하는게 좋다 => 안그러면 좀 복잡해짐\n",
+    "- 2개이상의 집단별 조건일때는 list 사용"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "driving-vancouver",
+   "execution_count": 5,
+   "id": "typical-comparative",
    "metadata": {},
    "outputs": [
     {
@@ -930,93 +931,170 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " num [1:3(1d)] 5.01 5.94 6.59\n",
+      " - attr(*, \"dimnames\")=List of 1\n",
+      "  ..$ : chr [1:3] \"setosa\" \"versicolor\" \"virginica\"\n"
+     ]
     }
    ],
    "source": [
-    "tapply(iris$Sepal.Length,iris$Species,mean)"
+    "tapply(iris$Sepal.Length,iris$Species,mean)\n",
+    "str(tapply(iris$Sepal.Length,iris$Species,mean)) # 1 dimenstion array"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "technological-capability",
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "blind-organizer",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of 3\n",
+      " $ setosa    : num 5.01\n",
+      " $ versicolor: num 5.94\n",
+      " $ virginica : num 6.59\n",
+      " - attr(*, \"dim\")= int 3\n",
+      " - attr(*, \"dimnames\")=List of 1\n",
+      "  ..$ : chr [1:3] \"setosa\" \"versicolor\" \"virginica\"\n"
+     ]
+    }
+   ],
    "source": [
-    "#### 8. mapply()\n",
-    "- 인자가 여러개 필요한 함수를 적용시켜준다"
+    "# simplify => list로 돌려준다\n",
+    "str(tapply(iris$Sepal.Length,iris$Species,mean,simplify = F)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "timely-plant",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'data.frame':\t32 obs. of  11 variables:\n",
+      " $ mpg : num  21 21 22.8 21.4 18.7 18.1 14.3 24.4 22.8 19.2 ...\n",
+      " $ cyl : num  6 6 4 6 8 6 8 4 4 6 ...\n",
+      " $ disp: num  160 160 108 258 360 ...\n",
+      " $ hp  : num  110 110 93 110 175 105 245 62 95 123 ...\n",
+      " $ drat: num  3.9 3.9 3.85 3.08 3.15 2.76 3.21 3.69 3.92 3.92 ...\n",
+      " $ wt  : num  2.62 2.88 2.32 3.21 3.44 ...\n",
+      " $ qsec: num  16.5 17 18.6 19.4 17 ...\n",
+      " $ vs  : num  0 0 1 1 0 1 0 1 1 1 ...\n",
+      " $ am  : num  1 1 1 0 0 0 0 0 0 0 ...\n",
+      " $ gear: num  4 4 4 3 3 3 3 4 4 4 ...\n",
+      " $ carb: num  4 4 1 1 2 1 4 2 2 4 ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "str(mtcars)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "mathematical-vancouver",
+   "id": "wrapped-delaware",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>0</th><th scope=col>1</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>4</th><td>22.900  </td><td>28.07500</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>19.125  </td><td>20.56667</td></tr>\n",
+       "\t<tr><th scope=row>8</th><td>15.050  </td><td>15.40000</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|ll}\n",
+       "  & 0 & 1\\\\\n",
+       "\\hline\n",
+       "\t4 & 22.900   & 28.07500\\\\\n",
+       "\t6 & 19.125   & 20.56667\\\\\n",
+       "\t8 & 15.050   & 15.40000\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | 0 | 1 |\n",
+       "|---|---|---|\n",
+       "| 4 | 22.900   | 28.07500 |\n",
+       "| 6 | 19.125   | 20.56667 |\n",
+       "| 8 | 15.050   | 15.40000 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "        \n",
+       "Cylinder 0      1       \n",
+       "       4 22.900 28.07500\n",
+       "       6 19.125 20.56667\n",
+       "       8 15.050 15.40000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tapply(mtcars$mpg,list(Cylinder=mtcars$cyl,mtcars$am),mean)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "built-lemon",
+   "metadata": {},
+   "source": [
+    "#### 8. mapply()\n",
+    "- 인자가 여러개 필요한 함수를 적용시켜준다\n",
+    "- list로 돌려준다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "norman-experiment",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$Sepal.Length\n",
-      "[1] 5.843333\n",
+      "[[1]]\n",
+      "[1] 1 1 1 1\n",
       "\n",
-      "$Sepal.Width\n",
-      "[1] 3.057333\n",
+      "[[2]]\n",
+      "[1] 2 2 2\n",
       "\n",
-      "$Petal.Length\n",
-      "[1] 3.758\n",
+      "[[3]]\n",
+      "[1] 3 3\n",
       "\n",
-      "$Petal.Width\n",
-      "[1] 1.199333\n",
+      "[[4]]\n",
+      "[1] 4\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(lapply(iris[-5],mean))"
+    "print(mapply(rep,1:4,4:1))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "unusual-tamil",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Named num [1:4] 5.84 3.06 3.76 1.2\n",
-      " - attr(*, \"names\")= chr [1:4] \"Sepal.Length\" \"Sepal.Width\" \"Petal.Length\" \"Petal.Width\"\n",
-      "Sepal.Length  Sepal.Width Petal.Length  Petal.Width \n",
-      "    5.843333     3.057333     3.758000     1.199333 \n"
-     ]
-    }
-   ],
-   "source": [
-    "str(mapply(mean,iris[-5])) #그냥 벡터네\n",
-    "print(mapply(mean,iris[-5]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "comfortable-breast",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in dots[[2L]][[1L]]: 객체의 타입 'closure'는 부분대입할 수 없습니다\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in dots[[2L]][[1L]]: 객체의 타입 'closure'는 부분대입할 수 없습니다\nTraceback:\n",
-      "1. mapply(lapply, iris[-5], mean)"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "modular-building",
+   "id": "apart-presentation",
    "metadata": {},
    "source": [
     "#### 9. aggregate ( )\n",
@@ -1029,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "advisory-progress",
+   "id": "interstate-forestry",
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "julian-programming",
+   "id": "cubic-dutch",
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1271,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "practical-antique",
+   "id": "killing-ethernet",
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "graphic-competition",
+   "id": "demographic-companion",
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "pretty-designer",
+   "id": "going-exception",
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1680,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "possible-press",
+   "id": "sitting-portal",
    "metadata": {},
    "outputs": [
     {
