--- a/R/R_정리/R09 ; data.frame functions-1.ipynb
+++ b/R/R_정리/R09 ; data.frame functions-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "outside-skirt",
+   "id": "affecting-legislature",
    "metadata": {},
    "source": [
     "## R09 ; 데이터 프레임에서 유용한 함수들"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coated-wrong",
+   "id": "seeing-johns",
    "metadata": {},
    "source": [
     "#### 1. ifelse( )"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "stone-klein",
+   "id": "honey-damages",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mexican-skill",
+   "id": "former-velvet",
    "metadata": {},
    "source": [
     "#### 2. which( )"
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "second-advertiser",
+   "id": "beneficial-trace",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cellular-subject",
+   "id": "wound-hungary",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "through-armenia",
+   "id": "fancy-dayton",
    "metadata": {},
    "source": [
     "#### 3. with( ) within()\n",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "associate-science",
+   "id": "tracked-viewer",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "comprehensive-chick",
+   "id": "marked-citizenship",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decent-spell",
+   "id": "optional-madagascar",
    "metadata": {},
    "source": [
     "#### 4. subset(data.frame ,subset,select)\n",
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "aquatic-paragraph",
+   "id": "fancy-jenny",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "civic-mason",
+   "id": "instructional-mathematics",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "corrected-nothing",
+   "id": "enormous-warren",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "injured-crossing",
+   "id": "sapphire-jacket",
    "metadata": {},
    "source": [
     "#### 5. lapply( )\n",
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "appreciated-central",
+   "id": "applicable-confusion",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "valuable-beaver",
+   "id": "monthly-democrat",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "authorized-boost",
+   "id": "stunning-arthur",
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "animated-spiritual",
+   "id": "included-thriller",
    "metadata": {},
    "source": [
     "#### 6. sapply( )\n",
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "earned-ordinance",
+   "id": "outdoor-popularity",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "executed-beauty",
+   "id": "adapted-costs",
    "metadata": {},
    "outputs": [
     {
@@ -882,20 +882,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consistent-penetration",
+   "id": "sixth-diesel",
    "metadata": {},
    "source": [
-    "#### 7. tapply( )\n",
+    "#### 7. tapply(vector,index,fun )\n",
     "- 기준으로 나눠서 계산한다\n",
     "- default return값은 배열이다\n",
-    "- 주로 object는 vector를 사용하는게 좋다 => 안그러면 좀 복잡해짐\n",
+    "- index:a list of one or more factors, are coerced to factors by as.factor\n",
     "- 2개이상의 집단별 조건일때는 list 사용"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "typical-comparative",
+   "id": "limiting-steps",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "blind-organizer",
+   "id": "cathedral-bankruptcy",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "timely-plant",
+   "id": "sought-siemens",
    "metadata": {},
    "outputs": [
     {
@@ -1003,59 +1003,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "wrapped-delaware",
+   "execution_count": 24,
+   "id": "received-penalty",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<thead><tr><th></th><th scope=col>0</th><th scope=col>1</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>4</th><td>22.900  </td><td>28.07500</td></tr>\n",
-       "\t<tr><th scope=row>6</th><td>19.125  </td><td>20.56667</td></tr>\n",
-       "\t<tr><th scope=row>8</th><td>15.050  </td><td>15.40000</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|ll}\n",
-       "  & 0 & 1\\\\\n",
-       "\\hline\n",
-       "\t4 & 22.900   & 28.07500\\\\\n",
-       "\t6 & 19.125   & 20.56667\\\\\n",
-       "\t8 & 15.050   & 15.40000\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "| <!--/--> | 0 | 1 |\n",
-       "|---|---|---|\n",
-       "| 4 | 22.900   | 28.07500 |\n",
-       "| 6 | 19.125   | 20.56667 |\n",
-       "| 8 | 15.050   | 15.40000 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "        \n",
-       "Cylinder 0      1       \n",
-       "       4 22.900 28.07500\n",
-       "       6 19.125 20.56667\n",
-       "       8 15.050 15.40000"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   transmission\n",
+      "cyl   auto   manual\n",
+      "  4 22.900 28.07500\n",
+      "  6 19.125 20.56667\n",
+      "  8 15.050 15.40000\n",
+      " num [1:3, 1:2] 22.9 19.1 15.1 28.1 20.6 ...\n",
+      " - attr(*, \"dimnames\")=List of 2\n",
+      "  ..$ cyl         : chr [1:3] \"4\" \"6\" \"8\"\n",
+      "  ..$ transmission: chr [1:2] \"auto\" \"manual\"\n"
+     ]
     }
    ],
    "source": [
-    "tapply(mtcars$mpg,list(Cylinder=mtcars$cyl,mtcars$am),mean)"
+    "car<-mtcars\n",
+    "car$am <-factor(car$am,levels=c(0,1),labels=c(\"auto\",\"manual\"))\n",
+    "print(tapply(car$mpg,list(cyl=car$cyl,transmission=car$am),mean))\n",
+    "str(tapply(car$mpg,list(cyl=car$cyl,transmission=car$am),mean))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "built-lemon",
+   "id": "aggregate-cliff",
    "metadata": {},
    "source": [
     "#### 8. mapply()\n",
@@ -1066,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "norman-experiment",
+   "id": "compliant-venture",
    "metadata": {},
    "outputs": [
     {
@@ -1094,20 +1071,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "apart-presentation",
+   "id": "formed-petroleum",
    "metadata": {},
    "source": [
     "#### 9. aggregate ( )\n",
     "- 쓰는 형태가 두가지다\n",
     "- by 이용 : a list of grouping elements, each as long as the variables in the data frame x. The elements are coerced to factors before use\n",
     "- formula 이용 => aggreagte(target~기준,data,FUN,subset=NULL)\n",
-    "- 인자의 길이에 신경쓸 필요가 있다"
+    "- 인자의 길이에 신경쓸 필요가 있다\n",
+    "- 반환값이 data.frame이다"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "interstate-forestry",
+   "id": "billion-seven",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cubic-dutch",
+   "id": "protecting-minister",
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "killing-ethernet",
+   "id": "electrical-optimization",
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "demographic-companion",
+   "id": "cardiovascular-illinois",
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1504,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "going-exception",
+   "id": "educational-bangkok",
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1658,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "sitting-portal",
+   "id": "experimental-brick",
    "metadata": {},
    "outputs": [
     {
@@ -2000,6 +1978,266 @@
     "# cyl 제외한 다른 모든 컬럼을 기준으로 cyl 의 평균을 구하기\n",
     "with(car.df,aggregate(cyl,as.list(car.df[-2]),mean)) #as.list 안하면=> list(data.frame) 원소 1개다\n",
     "aggregate(cyl~.,car.df,mean)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adjustable-trust",
+   "metadata": {},
+   "source": [
+    "####  10. by(data.frame,indices,fun)\n",
+    "- indices에 a factor or a list of factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "collective-cabinet",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "iris$Species: setosa\n",
+       "[1] 5.006\n",
+       "------------------------------------------------------------ \n",
+       "iris$Species: versicolor\n",
+       "[1] 5.936\n",
+       "------------------------------------------------------------ \n",
+       "iris$Species: virginica\n",
+       "[1] 6.588"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'by'"
+      ],
+      "text/latex": [
+       "'by'"
+      ],
+      "text/markdown": [
+       "'by'"
+      ],
+      "text/plain": [
+       "[1] \"by\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "by(iris$Sepal.Length,iris$Species,mean)\n",
+    "class(by(iris$Sepal.Length,iris$Species,mean))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "treated-coordination",
+   "metadata": {},
+   "source": [
+    "#### 11.table\n",
+    "- 주로 factor에 사용된다\n",
+    "- tabulate 와 달리 교차표 만들수있다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "cleared-honolulu",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>2</li>\n",
+       "\t<li>2</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>1</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 2\n",
+       "\\item 2\n",
+       "\\item 1\n",
+       "\\item 1\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 2\n",
+       "2. 2\n",
+       "3. 1\n",
+       "4. 1\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 2 2 1 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>2</li>\n",
+       "\t<li>2</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>1</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 2\n",
+       "\\item 2\n",
+       "\\item 1\n",
+       "\\item 1\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 2\n",
+       "2. 2\n",
+       "3. 1\n",
+       "4. 1\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 2 2 1 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 \n",
+      "2 2 1 1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# tabulate\n",
+    "tabulate(c(1,2,3,4,1,2))\n",
+    "tabulate(as.factor(c(1,2,3,4,1,2))) # 결과값 만들 돌려주는 vector다\n",
+    "counts <- tabulate(as.factor(c(1,2,3,4,1,2)))\n",
+    "names(counts)<-1:4\n",
+    "print(counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "entitled-vehicle",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "1 2 3 4 \n",
+       "2 2 1 1 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "1 2 3 4 \n",
+       "2 2 1 1 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "table(c(1,2,3,4,1,2))\n",
+    "table(as.factor(c(1,2,3,4,1,2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "combined-fantasy",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   \n",
+       "     0  1\n",
+       "  3 15  0\n",
+       "  4  4  8\n",
+       "  5  0  5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "table(mtcars$gear,mtcars$am)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "french-printer",
+   "metadata": {},
+   "source": [
+    "#### 12. xtabs(formula,data)\n",
+    "- table과 비슷한 기능 수행\n",
+    "- 반드시 formulat 형식"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "judicial-unemployment",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "    am\n",
+       "gear  0  1\n",
+       "   3 15  0\n",
+       "   4  4  8\n",
+       "   5  0  5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "   gear\n",
+       "am   3  4  5\n",
+       "  0 15  4  0\n",
+       "  1  0  8  5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "table(gear = mtcars$gear,am=mtcars$am)\n",
+    "xtabs(~am+gear,mtcars)"
    ]
   }
  ],
