--- a/R/R_정리/R11 ; data.frame functions-3 ; doBy.ipynb
+++ b/R/R_정리/R11 ; data.frame functions-3 ; doBy.ipynb
@@ -2,39 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "interesting-cholesterol",
+   "id": "corresponding-ghana",
    "metadata": {},
    "source": [
-    "## R11 ; data.frame functions-3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fleet-attraction",
-   "metadata": {},
-   "source": [
-    "- 대표적인 package \n",
-    "    - doBy\n",
-    "    - ddplyr"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "addressed-skirt",
-   "metadata": {},
-   "source": [
-    "### doBy\n",
-    "- 1.summaryBy( )\n",
-    "- 2.orderBy( )\n",
-    "- 3.sampleBy( )\n",
-    "\n",
-    "- 사용하는 함수의 현태에 따라 summary_by() order_by() sample_by()의 형식으로도 존재 다큐먼트 참조"
+    "## R11 ; data.frame functions-3 ; doBy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dated-commander",
+   "id": "activated-label",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "authentic-notification",
+   "id": "british-astronomy",
    "metadata": {},
    "source": [
     "#### 1. summaryBy(formula,data,FUN )\n",
@@ -67,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "seeing-debate",
+   "id": "certified-space",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "tough-zealand",
+   "id": "suitable-appraisal",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "pursuant-success",
+   "id": "fallen-family",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "circular-stress",
+   "id": "closing-hudson",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decreased-graduation",
+   "id": "appropriate-madison",
    "metadata": {},
    "source": [
     "#### 2.orderBy(r_formula,data)\n",
@@ -285,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "convinced-separate",
+   "id": "clean-ottawa",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "electric-relaxation",
+   "id": "monthly-america",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fiscal-jacket",
+   "id": "olympic-vector",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "annoying-string",
+   "id": "aquatic-symphony",
    "metadata": {},
    "source": [
     "#### 3. sampleBy(formula=~그룹,frac=0.1,data)"
@@ -482,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "serious-poker",
+   "id": "fifteen-gambling",
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "sized-narrative",
+   "id": "moved-beads",
    "metadata": {},
    "outputs": [
     {
@@ -735,14 +712,6 @@
    ],
    "source": [
     "sampleBy(~Species,frac=0.2,data=iris) #종별 20%"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "rural-hands",
-   "metadata": {},
-   "source": [
-    "### dplyr"
    ]
   }
  ],
