--- a/R/R_정리/R09 ; data.frame functions-1.ipynb
+++ b/R/R_정리/R09 ; data.frame functions-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "spiritual-folks",
+   "id": "direct-learning",
    "metadata": {},
    "source": [
     "## R09 ; 데이터 프레임에서 유용한 함수들"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "yellow-consideration",
+   "id": "charitable-stopping",
    "metadata": {},
    "source": [
     "#### 1. ifelse( )"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "missing-weekly",
+   "id": "comparative-soldier",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hawaiian-praise",
+   "id": "reserved-socket",
    "metadata": {},
    "source": [
     "#### 2. which( )"
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "regional-franchise",
+   "id": "opposed-tribute",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "uniform-anxiety",
+   "id": "surprising-powell",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "serious-newton",
+   "id": "uniform-hotel",
    "metadata": {},
    "source": [
     "#### 3. with( ) within()\n",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "other-independence",
+   "id": "trying-copyright",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "instrumental-direction",
+   "id": "duplicate-fireplace",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "solid-variance",
+   "id": "assured-living",
    "metadata": {},
    "source": [
     "#### 4. subset(data.frame ,subset,select)\n",
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "tough-footage",
+   "id": "descending-costs",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "progressive-scratch",
+   "id": "entitled-closure",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "pharmaceutical-redhead",
+   "id": "brief-alert",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dangerous-hundred",
+   "id": "searching-aging",
    "metadata": {},
    "source": [
     "#### 5. lapply( )\n",
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "living-guess",
+   "id": "continent-hungarian",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "median-sheffield",
+   "id": "sixth-disney",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "consistent-wichita",
+   "id": "undefined-republican",
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "freelance-electric",
+   "id": "quality-respondent",
    "metadata": {},
    "source": [
     "#### 6. sapply( )\n",
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "junior-quantity",
+   "id": "signed-brooklyn",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "unavailable-hearts",
+   "id": "third-venture",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "laughing-retirement",
+   "id": "smaller-guitar",
    "metadata": {},
    "source": [
     "#### 7. tapply(vector,index,fun )\n",
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fabulous-still",
+   "id": "fitting-jimmy",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fabulous-stroke",
+   "id": "creative-sending",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "banned-holmes",
+   "id": "motivated-century",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "restricted-coordination",
+   "id": "hollywood-horizontal",
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "swiss-technical",
+   "id": "eleven-reward",
    "metadata": {},
    "source": [
     "#### 8. mapply()\n",
@@ -1043,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "common-teens",
+   "id": "opposed-shelf",
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "musical-morgan",
+   "id": "violent-stream",
    "metadata": {},
    "source": [
     "#### 9. aggregate ( )\n",
@@ -1087,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "living-broad",
+   "id": "olympic-cologne",
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "personalized-albania",
+   "id": "biblical-creativity",
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "incident-trinidad",
+   "id": "fleet-demand",
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "contemporary-reminder",
+   "id": "numerous-agriculture",
    "metadata": {},
    "outputs": [
     {
@@ -1506,7 +1506,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "corrected-relaxation",
+   "id": "directed-potato",
    "metadata": {},
    "outputs": [
     {
@@ -1660,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "checked-joint",
+   "id": "ceramic-contract",
    "metadata": {},
    "outputs": [
     {
@@ -1984,7 +1984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "anonymous-disney",
+   "id": "measured-morning",
    "metadata": {},
    "source": [
     "####  10. by(data.frame,indices,fun)\n",
@@ -1994,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "cloudy-sewing",
+   "id": "detailed-essence",
    "metadata": {},
    "outputs": [
     {
@@ -2039,7 +2039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "studied-google",
+   "id": "neural-insight",
    "metadata": {},
    "source": [
     "#### 11.table\n",
@@ -2050,7 +2050,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "associate-worker",
+   "id": "numeric-camping",
    "metadata": {},
    "outputs": [
     {
@@ -2140,7 +2140,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "statistical-speaking",
+   "id": "human-space",
    "metadata": {},
    "outputs": [
     {
@@ -2174,7 +2174,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "supposed-sally",
+   "id": "bigger-contents",
    "metadata": {},
    "outputs": [
     {
@@ -2197,7 +2197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "answering-railway",
+   "id": "recent-button",
    "metadata": {},
    "source": [
     "#### 12. xtabs(formula,data)\n",
@@ -2207,10 +2207,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "olympic-danish",
+   "execution_count": 3,
+   "id": "english-encyclopedia",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "    am\n",
+       "gear  0  1\n",
+       "   3 15  0\n",
+       "   4  4  8\n",
+       "   5  0  5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/plain": [
@@ -2238,7 +2251,8 @@
     }
    ],
    "source": [
-    "table(gear = mtcars$gear,am=mtcars$am)\n",
+    "table(gear=mtcars$gear,am=mtcars$am)\n",
+    "table(gear=mtcars$gear,am=mtcars$am)\n",
     "xtabs(~am+gear,mtcars)"
    ]
   }
