--- a/Python/Python_base/Python01; print, type, input, operator.ipynb
+++ b/Python/Python_base/Python01; print, type, input, operator.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Python01; basic-grammar\n",
+    "## Python01; print, type, input, operator\n",
     "- print 함수\n",
     "- 변수와 타입\n",
-    "- 사칙연산\n",
     "- 형변환\n",
-    "- input 함수"
+    "- input 함수\n",
+    "- 연산자"
    ]
   },
   {
@@ -774,11 +774,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "print(10==10 and 10!=5)"
+    "print(10==10 and 10!=5)\n",
+    "print(10==10 and 10<5)\n",
+    "print(10==10 or 10==5)"
    ]
   }
  ],
