--- a/Python/Python_base/Python01; print, type, input, operator.ipynb
+++ b/Python/Python_base/Python01; print, type, input, operator.ipynb
@@ -331,6 +331,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.기본 데이터 타입\n",
+    "  - 정수 (int)\n",
+    "  - 실수 (float)\n",
+    "  - 문자열 (str)\n",
+    "  - 불리언 (boolean)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
@@ -350,6 +361,7 @@
     "c = 'a'\n",
     "d = True\n",
     "print(type(a),type(b),type(c),type(d))\n",
+    "\n",
     "a = str()\n",
     "b = int()\n",
     "c = float()\n",
@@ -361,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.변수의 타입을 변화할수 있다"
+    "#### 2.변수의 타입을 변화할수 있다"
    ]
   },
   {
@@ -438,39 +450,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.변수의 타입을 비교할수 있다\n",
-    "- is 연산자 활용"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "False\n",
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "a=5\n",
-    "b=10\n",
-    "c=15.4\n",
-    "d='abc'\n",
-    "print(type(a) is b)\n",
-    "print(a is c)\n",
-    "print(a is d)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### input함수\n",
     "- 사용자 입력\n",
     "- input으로 받는 값은 타입이 문자열(str)이다"
@@ -521,7 +500,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 산수 연산자"
+    "### 연산자"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.산수 연산자"
    ]
   },
   {
@@ -614,7 +600,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### pythonista 파이썬 스러운 연산자"
+    "#### 2.파이썬 스러운 연산자"
    ]
   },
   {
@@ -652,7 +638,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 비교 연산자"
+    "#### 3.비교 연산자"
    ]
   },
   {
@@ -701,7 +687,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 논리 연산자\n",
+    "#### 4.논리 연산자\n",
     "- and\n",
     "- or \n",
     "- not"
