--- a/Python/Python_base/파이썬.ipynb
+++ b/Python/Python_base/파이썬.ipynb
@@ -100,10 +100,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Phd is very easy!!! 👍\n"
+     ]
+    }
+   ],
+   "source": [
+    "import emoji\n",
+    "\n",
+    "print(emoji.emojize('Phd is very easy!!! :thumbs_up:'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Phd is very easy!!! 👍"
+   ]
   }
  ],
  "metadata": {
