--- a/Python/Python_base/Python03; string.ipynb
+++ b/Python/Python_base/Python03; string.ipynb
@@ -313,6 +313,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# isupper()\n",
+    "print('abcDefG'.isupper())\n",
+    "print('ABDCDDD'.isupper())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -339,22 +359,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'aaa aaa'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
     }
    ],
    "source": [
-    "'aaa aaa '.rstrip()"
+    "# islower()\n",
+    "print('abcDefG'.islower())\n",
+    "print('abcde'.islower())"
    ]
   },
   {
