--- a/Python/Python_base/Untitled.ipynb
+++ b/Python/Python_base/Untitled.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
      "output_type": "stream",
      "text": [
       "kanghee\n",
-      "140522081186672 140521539821616\n"
+      "140573216371824 140572956651824\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -83,9 +83,9 @@
      "text": [
       "10\n",
       "10\n",
-      "4345604736 4345604736 4345604736\n",
-      "4345604736 4345607616 4345604736\n",
-      "4345604736 4345607616 4345610816\n"
+      "4313942656 4313942656 4313942656\n",
+      "4313942656 4313945536 4313942656\n",
+      "4313942656 4313945536 4313948736\n"
      ]
     }
    ],
@@ -97,6 +97,9 @@
     "        self.job =job\n",
     "    def personInfo(self):\n",
     "        return f'{self.name},{self.job}'\n",
+    "    @classmethod\n",
+    "    def printId(cls):\n",
+    "        print(cls.id)\n",
     "\n",
     "person1 = Person('kanghee','student')\n",
     "print(person1.id)\n",
@@ -110,6 +113,9 @@
     "\n",
     "# person1.anything = anything \n",
     "# 역으로 자바에서는 이런식으로 인스턴스 변수 추가 불가능\n",
+    "\n",
+    "# instance variables override class variables\n",
+    "# 물론 Person 안에 영향을 미치지 않는다\n",
     "\n",
     "person1.id = 100\n",
     "print(id(Person.id),id(person1.id),id(person2.id)) # person1 만 다른주소다\n",
@@ -148,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 201,
    "metadata": {
     "scrolled": true
    },
@@ -160,6 +166,16 @@
       "Student class\n",
       "hello\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[__main__.Student, __main__.Person, object]"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -181,7 +197,9 @@
     "        print('Student class')\n",
     "\n",
     "student01 = Student() \n",
-    "student01.sayhello()\n"
+    "student01.sayhello()\n",
+    "\n",
+    "Student.mro()\n"
    ]
   },
   {
@@ -316,6 +334,8 @@
     "        \n",
     "    def printInfo(self):\n",
     "        print(self.info)\n",
+    "      \n",
+    "    \n",
     "    \n",
     "class Student(Person):\n",
     "\n",
@@ -507,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -517,52 +537,11 @@
       "Person class\n",
       "Student class\n",
       "seoul\n",
-      "None\n",
-      "seoul\n",
-      "Help on Student in module __main__ object:\n",
-      "\n",
-      "class Student(Person)\n",
-      " |  Method resolution order:\n",
-      " |      Student\n",
-      " |      Person\n",
-      " |      builtins.object\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __init__(self)\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Methods inherited from Person:\n",
-      " |  \n",
-      " |  printInfo(self)\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Class methods inherited from Person:\n",
-      " |  \n",
-      " |  printStatic() from builtins.type\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Static methods inherited from Person:\n",
-      " |  \n",
-      " |  sayhello()\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors inherited from Person:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data and other attributes inherited from Person:\n",
-      " |  \n",
-      " |  address = 'seoul'\n",
-      "\n",
-      "None\n",
-      "{'info': 'nothing'}\n"
+      "dague\n",
+      "dague\n",
+      "a\n",
+      "dague\n",
+      "a\n"
      ]
     }
    ],
@@ -574,30 +553,28 @@
     "        self.info = 'nothing'\n",
     "        print('Person class')\n",
     "        \n",
-    "    @staticmethod\n",
-    "    def sayhello():\n",
-    "        print('hello')\n",
-    "    \n",
-    "    def printInfo(self):\n",
-    "        print(self.info)\n",
-    "        \n",
     "    @classmethod\n",
     "    def printStatic(cls):\n",
     "        print(cls.address)\n",
     "    \n",
     "class Student(Person):# update\n",
+    "    address = 'dague'\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        print('Student class')\n",
-    "\n",
+    "    def printout(self):\n",
+    "        print(super().address)\n",
+    "        super().printStatic()\n",
+    "        self.printStatic()\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def printStatic(cls):\n",
+    "        print(cls.address)\n",
+    "        print('a')\n",
     "\n",
     "student01 = Student() \n",
-    "print(student01.printStatic())\n",
-    "Person.printStatic()\n",
-    "\n",
-    "\n",
-    "print(help(student01))\n",
-    "print(student01.__dict__)\n",
+    "student01.printout()\n",
+    "student01.printStatic()\n",
     "\n"
    ]
   },
