--- a/Python/Python_base/Python09; class-1.ipynb
+++ b/Python/Python_base/Python09; class-1.ipynb
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -740,6 +740,7 @@
     "    def printJob(cls):\n",
     "        print(cls.job)\n",
     "        print('static method from super')\n",
+    "        \n",
     "class CollegeStudent(Student):\n",
     "    \n",
     "    @classmethod\n",
@@ -748,7 +749,7 @@
     "        print('static method from sub')\n",
     "        \n",
     "a = CollegeStudent()\n",
-    "a.printJob()        \n"
+    "a.printJob()        "
    ]
   },
   {
@@ -812,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
