--- a/Python/Python_base/Python07; if, for, while.ipynb
+++ b/Python/Python_base/Python07; if, for, while.ipynb
@@ -6,10 +6,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "day03"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "리스트 comprehension \n",
     "리스트 comprehension if\n",
     "리스트 comprehension if else\n",
-    "삼항연산"
+    "삼항연산\n",
+    "\n",
+    "enumerator\n",
+    "\n",
+    "unpacking 이용한 for loop\n",
+    "\n",
+    "빈 리스트는 False 모 이런거"
    ]
   },
   {
